<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/new_list"
        yourapp:showAsAction="always"/>

    <!-- Menu Options -->

    <item
        android:id="@+id/action_delete_all"
        android:showAsAction="never"
        android:title="@string/delete_all"/>
    <item
        android:id="@+id/action_update"
        android:showAsAction="never"
        android:title="@string/update"/>
    <item
        android:id="@+id/action_settings"
        android:showAsAction="never"
        android:title="@string/settings"/>

</menu>